horizontal scroll fixed

--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -10,7 +10,7 @@
 html,
 body {
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "raleway-example";
 }
 
 body {
@@ -61,6 +61,7 @@ body {
     border: 2px solid #aa6d8f;
     background: #fff;
     border-radius: 15px;
+    font-family: "raleway-example";
 
     &:hover {
       background: #aa6d8f;
@@ -78,7 +79,7 @@ body {
 
 .js-formContainer {
   position: relative;
-  overflow: auto;
+  overflow: hidden;
   &:after {
     content: "";
     display: block;
@@ -112,6 +113,7 @@ body {
       color: #fff;
       font-size: 16px;
       font-style: normal;
+      font-family: "raleway-example";
     }
   }
 
@@ -189,6 +191,7 @@ body {
         border-radius: 10px;
         background: #fff;
         color: #aa6d8f;
+        font-family: "raleway-example";
 
         &:active {
           background: #aa6d8f;
@@ -231,6 +234,7 @@ body {
   font-weight: 600;
   border: none;
   cursor: pointer;
+  font-family: "raleway-example";
   &:hover,
   &:focus {
     background: #aa6d8f;
@@ -240,7 +244,6 @@ body {
 
 .dropdown-content {
   display: none;
-  width: 42%;
   position: absolute;
   background-color: #e1bacb;
   border-radius: 5px;
@@ -274,16 +277,16 @@ body {
   position: relative;
   width: 80px;
   height: 80px;
-}
-.lds-ripple div {
-  position: absolute;
-  border: 4px solid #aa6d8f;
-  opacity: 1;
-  border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-.lds-ripple div:nth-child(2) {
-  animation-delay: -0.5s;
+  div {
+   position: absolute;
+   border: 4px solid #aa6d8f;
+   opacity: 1;
+   border-radius: 50%;
+   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+   &:nth-child(2) {
+     animation-delay: -0.5s;
+   }
+ }
 }
 @keyframes lds-ripple {
   0% {
